@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        + sortedArray : TextField
        + unsortedArray : TextField
        ~ mass : int[]
        + RandomNewArray()
        + bubbleSort()
        + insertionSort()
        + selectionSort()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  sample.Controller o-- sample.Metods.Context : context
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
